--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
   --gray: #2f303a;
   --light-gray: #757575;
   --primary-font: 'Roboto', sans-serif;
-  --secondary-font: 'Raleway', sans-serif;
+  --logo-font: 'Raleway', sans-serif;
 }
 
 /* Header section style */
@@ -13,10 +13,10 @@
 }
 
 .header__logo {
-  font-family: var(--secondary-font);
+  font-family: var(--logo-font);
   font-weight: 700;
   font-size: 26px;
-  line-height: 31px;
+  line-height: 1.1;
   color: var(--black);
   text-decoration: none;
 }
@@ -37,7 +37,7 @@
   font-family: var(--primary-font);
   font-size: 14px;
   font-weight: 500;
-  line-height: 16px;
+  line-height: 1.1;
   text-decoration: none;
   color: var(--black);
 }
@@ -46,7 +46,7 @@
   font-family: var(--primary-font);
   font-size: 14px;
   font-weight: 500;
-  line-height: 16px;
+  line-height: 1.1;
   text-decoration: none;
   color: var(--blue);
 }
@@ -55,7 +55,7 @@
   font-family: var(--primary-font);
   font-size: 14px;
   font-weight: 500;
-  line-height: 16px;
+  line-height: 1.1;
   text-decoration: none;
   color: var(--light-gray);
 }
@@ -64,7 +64,7 @@
   font-family: var(--primary-font);
   font-size: 15px;
   font-weight: 500;
-  line-height: 16px;
+  line-height: 0.9;
   text-decoration: none;
   color: var(--blue);
 }
@@ -73,7 +73,7 @@
   font-family: var(--primary-font);
   font-size: 44px;
   font-weight: 900;
-  line-height: 60px;
+  line-height: 1.3;
   text-align: center;
   text-transform: capitalize;
   color: var(--white);
@@ -84,7 +84,7 @@
   font-family: var(--primary-font);
   font-size: 16px;
   font-weight: 700;
-  line-height: 30px;
+  line-height: 1.8;
   text-align: center;
   color: var(--white);
   background-color: var(--blue);
@@ -113,7 +113,7 @@
   font-family: var(--primary-font);
   font-size: 14px;
   font-weight: 700;
-  line-height: 16px;
+  line-height: 1.1;
   color: var(--black);
 }
 
@@ -122,7 +122,7 @@
   font-family: var(--primary-font);
   font-size: 14px;
   font-weight: 400;
-  line-height: 24px;
+  line-height: 1.7;
   color: var(--light-gray);
 }
 
@@ -130,7 +130,7 @@
   font-family: var(--primary-font);
   font-size: 36px;
   font-weight: 700;
-  line-height: 42px;
+  line-height: 1.1;
   color: var(--black);
   text-align: center;
 }
@@ -145,7 +145,7 @@
   font-family: var(--primary-font);
   font-size: 36px;
   font-weight: 700;
-  line-height: 42px;
+  line-height: 1.1;
   color: var(--black);
   text-align: center;
 }
@@ -154,7 +154,7 @@
   font-family: var(--primary-font);
   font-size: 16px;
   font-weight: 400;
-  line-height: 19px;
+  line-height: 1.2;
   color: var(--light-gray);
   text-align: center;
   list-style: none;
@@ -164,7 +164,7 @@
   font-family: var(--primary-font);
   font-size: 16px;
   font-weight: 500;
-  line-height: 19px;
+  line-height: 1.2;
   color: var(--black);
   text-align: center;
 }
@@ -177,10 +177,10 @@
 
 .footer__logo {
   color: var(--white);
-  font-family: var(--secondary-font);
+  font-family: var(--logo-font);
   font-weight: 700;
   font-size: 26px;
-  line-height: 31px;
+  line-height: 1.2;
   text-decoration: none;
 }
 
@@ -205,21 +205,21 @@
   font-family: var(--primary-font);
   font-size: 14;
   font-weight: 400;
-  line-height: 16px;
+  line-height: 1.1;
 }
 
 .footer__contact-address {
   font-family: var(--primary-font);
   font-size: 14;
   font-weight: 400;
-  line-height: 16px;
+  line-height: 1.1;
 }
 
 .footer__contact-details {
   font-family: var(--primary-font);
   font-size: 14;
   font-weight: 400;
-  line-height: 16px;
+  line-height: 1.1;
   color: var(--light-gray);
 }
 
@@ -234,15 +234,13 @@
   font-family: var(--primary-font);
   font-size: 16px;
   font-weight: 500;
-  line-height: 26px;
+  line-height: 1.8;
   text-align: center;
   color: var(--black);
   background-color: #f5f4fa;
   text-decoration: none;
   border-radius: 4px;
   cursor: pointer;
-  padding: 12px 24px;
-  border: 1px solid #f5f4fa;
 }
 
 .filters-section li:hover {
@@ -266,7 +264,7 @@
   font-family: var(--primary-font);
   font-size: 16px;
   font-weight: 400;
-  line-height: 30px;
+  line-height: 1.8;
   text-align: left;
   color: var(--light-gray);
   text-decoration: none;
@@ -276,7 +274,7 @@
   font-family: var(--primary-font);
   font-size: 18px;
   font-weight: 700;
-  line-height: 36px;
+  line-height: 2;
   text-align: left;
   color: var(--black);
   text-decoration: none;
