--- a/css/styles.css
+++ b/css/styles.css
@@ -97,9 +97,9 @@
 
 /* Body section*/
 
-.body {
-  font-family: var(--primary-font);
-  color: var(--black);
+body {
+  font-family: 'Roboto', sans-serif;
+  color: black;
 }
 
 /* What we do (wwd) section style*/
@@ -203,24 +203,43 @@
 
 .footer__contact-address {
   font-family: var(--primary-font);
-  font-size: 14;
+  font-size: 14px;
   font-weight: 400;
   line-height: 1.1;
 }
 
 .footer__contact-address {
   font-family: var(--primary-font);
-  font-size: 14;
+  font-size: 14px;
   font-weight: 400;
   line-height: 1.1;
 }
 
 .footer__contact-details {
   font-family: var(--primary-font);
-  font-size: 14;
+  font-size: 14px;
   font-weight: 400;
   line-height: 1.1;
   color: var(--light-gray);
+  text-decoration: none;
+}
+
+.footer__contact-details a {
+  font-family: var(--primary-font);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.1;
+  text-decoration: none;
+  color: var(--light-gray);
+}
+
+. .footer__contact-details a:hover {
+  font-family: var(--primary-font);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.1;
+  text-decoration: none;
+  color: var(--blue);
 }
 
 /* Filters  section style */
