--- a/css/styles.css
+++ b/css/styles.css
@@ -8,9 +8,14 @@
   --logo-font: 'Raleway', sans-serif;
 }
 
-/* Header section style */
-.header {
+/* Body section*/
+
+body {
+  font-family: 'Roboto', sans-serif;
+  color: black;
 }
+
+/* Header section style */
 
 .header__logo {
   font-family: var(--logo-font);
@@ -34,7 +39,6 @@
 }
 
 .header__navigation a {
-  font-family: var(--primary-font);
   font-size: 14px;
   font-weight: 500;
   line-height: 1.1;
@@ -43,7 +47,6 @@
 }
 
 .header__navigation a:hover {
-  font-family: var(--primary-font);
   font-size: 14px;
   font-weight: 500;
   line-height: 1.1;
@@ -52,7 +55,6 @@
 }
 
 .header__info a {
-  font-family: var(--primary-font);
   font-size: 14px;
   font-weight: 500;
   line-height: 1.1;
@@ -61,7 +63,6 @@
 }
 
 .header__info a:hover {
-  font-family: var(--primary-font);
   font-size: 15px;
   font-weight: 500;
   line-height: 0.9;
@@ -70,7 +71,6 @@
 }
 
 .header__title {
-  font-family: var(--primary-font);
   font-size: 44px;
   font-weight: 900;
   line-height: 1.3;
@@ -81,7 +81,6 @@
 }
 
 .header__request {
-  font-family: var(--primary-font);
   font-size: 16px;
   font-weight: 700;
   line-height: 1.8;
@@ -93,13 +92,6 @@
   cursor: pointer;
   padding: 12px 24px;
   border: 1px solid;
-}
-
-/* Body section*/
-
-body {
-  font-family: 'Roboto', sans-serif;
-  color: black;
 }
 
 /* What we do (wwd) section style*/
@@ -223,31 +215,25 @@ body {
   color: var(--blue);
 }
 
-/* Filters  section style */
+/* Filters section style */
 
-.filters-section ul {
-  list-style: none;
-  text-decoration: none;
-}
-
-.filters-section li {
+.filters-section button {
   font-size: 16px;
   font-weight: 500;
-  line-height: 1.8;
+  line-height: 1.6;
   text-align: center;
   color: var(--black);
   background-color: #f5f4fa;
-  text-decoration: none;
   border-radius: 4px;
   cursor: pointer;
 }
 
-.filters-section li:hover {
+.filters-section button:hover {
   background-color: var(--blue);
   color: var(--white);
 }
 
-.filters-section li:focus {
+.filters-section button:focus {
   background-color: var(--blue);
   color: var(--white);
 }
