--- a/css/styles.css
+++ b/css/styles.css
@@ -217,15 +217,19 @@ body {
 
 /* Filters section style */
 
+.filters-section {
+  text-align: center;
+}
+
 .filters-section button {
   font-size: 16px;
   font-weight: 500;
   line-height: 1.6;
   text-align: center;
-  color: var(--black);
   background-color: #f5f4fa;
   border-radius: 4px;
   cursor: pointer;
+  border: none;
 }
 
 .filters-section button:hover {
